syntax = "proto3";
package influxdata.iox.querier.v1;
option go_package = "github.com/influxdata/iox/querier/v1";

// Request body for ticket in "end-user to querier" flight requests.
message ReadInfo {
  // Namespace name.
  string namespace_name = 1;

  // SQL query.
  string sql_query = 2;

  QueryType query_type = 3;

  enum QueryType {
    // An unspecified query type. IOx may choose how to interpret sql_query.
    QUERY_TYPE_UNSPECIFIED = 0;
    // SQL query.
    QUERY_TYPE_SQL = 1;
    // InfluxQL query.
    QUERY_TYPE_INFLUX_QL = 2;
  }
}

// Response in "end-user to querier" flight response.
//
// Currently this does not contain any metadata, but IOx might provide metadata like data lineage information,
// statistics or watermark information in the future.
message AppMetadata {}
