syntax = "proto3";
package influxdata.iox.sharder.v1;
option go_package = "github.com/influxdata/iox/sharder/v1";

service ShardService {
  // Shard the given inputs to a Catalog ID for the destination Sequencer
  // (Sequencer ID).
  rpc ShardToSequencerId(ShardToSequencerIdRequest) returns (ShardToSequencerIdResponse);
}

message ShardToSequencerIdRequest {
  // The shard input values to map onto a Sequencer.
  oneof input {
    // A table & namespace pair.
    TableNamespaceTuple table_namespace = 1;
  }
}

message ShardToSequencerIdResponse {
  uint64 sequencer_id = 1;
}

message TableNamespaceTuple {
  string table = 1;
  string namespace = 2;
}
